# CoolDiff

./: .clang-format.yaml  .clang-tidy  .gitignore  CMakeLists.txt  README.md  file.txt
cmake/: Tools.cmake
config/: CoolDiffConfig.cmake.in
example/: CMakeLists.txt  GaussNewton.cpp  Gaussian.cpp  MatrixArithmetic.cpp
example/GaussNewton/: main.cpp
example/GaussNewton/config/: GaussNewtonData.hpp.in  GaussNewtonData.py.in
example/GaussNewton/data/: DataVisualization.py  in.txt  out.txt
example/GaussNewton/include/: GaussNewton.hpp  Oracle.hpp  OracleMatrix.hpp  OracleScalar.hpp
example/GaussNewton/src/: GaussNewton.cpp  Oracle.cpp  OracleMatrix.cpp  OracleScalar.cpp
example/NeuralNet/: main.cpp
example/NeuralNet/MNISTData/: Readme.txt
example/NeuralNet/config/: MNISTData.hpp.in
example/NeuralNet/include/: Layer.hpp  NeuralNet.hpp
example/NeuralNet/src/: Layer.cpp
include/: CommonFunctions.hpp  CommonHeader.hpp  CoolDiff.hpp  Expression.hpp  IVariable.hpp  MemoryManager.hpp  MetaVariable.hpp  Operators.hpp  Parameter.hpp  VarWrap.hpp  Variable.hpp
include/BinaryOps/: GenericDiv.hpp  GenericPow.hpp  GenericProduct.hpp  GenericSub.hpp  GenericSum.hpp
include/Matrix/: CommonMatFunctions.hpp  GlobalParameters.hpp  IMatrix.hpp  MatOperators.hpp  Matrix.hpp  MatrixBasics.hpp  MatrixHelper.hpp  MatrixSplOps.hpp  MetaMatrix.hpp  UnaryFunctions.cuh  UnaryFunctions.hpp
include/Matrix/BinaryOps/: BinarySplOps.hpp  GenericMatConv.hpp  GenericMatHadamard.hpp  GenericMatProduct.hpp  GenericMatSub.hpp  GenericMatSum.hpp
include/Matrix/MatrixHandler/: EyeMatAddHandler.hpp  EyeMatMulHandler.hpp  MatAddNaiveHandler.hpp  MatMulNaiveHandler.hpp  MatrixHandler.hpp  MatrixStaticHandler.hpp  ZeroMatAddHandler.hpp  ZeroMatMulHandler.hpp
include/Matrix/MatrixHandler/MatrixAddHandler/: EyeMatAddHandler.hpp  EyeMatScalarAddHandler.hpp  ZeroMatAddHandler.hpp  ZeroMatScalarAddHandler.hpp
include/Matrix/MatrixHandler/MatrixAddition/: MatAddNaiveHandler.hpp  MatScalarAddNaiveHandler.hpp
include/Matrix/MatrixHandler/MatrixConvHandler/: ZeroMatConvHandler.hpp  ZeroMatDervConvHandler.hpp
include/Matrix/MatrixHandler/MatrixConvolution/: MatConvNaiveHandler.hpp  MatDervConvNaiveHandler.hpp
include/Matrix/MatrixHandler/MatrixCos/: MatCosNaiveHandler.hpp
include/Matrix/MatrixHandler/MatrixCosHandler/: EyeMatCosHandler.hpp  ZeroMatCosHandler.hpp
include/Matrix/MatrixHandler/MatrixDet/: MatDetEigenHandler.hpp
include/Matrix/MatrixHandler/MatrixDetHandler/: EyeMatDetHandler.hpp  ZeroMatDetHandler.hpp
include/Matrix/MatrixHandler/MatrixHadamard/: MatHadamardNaiveHandler.hpp
include/Matrix/MatrixHandler/MatrixHadamardHandler/: EyeMatHadamardHandler.hpp  ZeroMatHadamardHandler.hpp
include/Matrix/MatrixHandler/MatrixInvHandler/: EyeMatInvHandler.hpp  ZeroMatInvHandler.hpp
include/Matrix/MatrixHandler/MatrixInverse/: MatInverseEigenHandler.hpp
include/Matrix/MatrixHandler/MatrixKronHandler/: EyeMatKronHandler.hpp  ZeroMatKronHandler.hpp
include/Matrix/MatrixHandler/MatrixKronProduct/: MatKronNaiveHandler.hpp
include/Matrix/MatrixHandler/MatrixMulHandler/: EyeMatMulHandler.hpp  EyeMatScalarMulHandler.hpp  ZeroMatMulHandler.hpp  ZeroMatScalarMulHandler.hpp
include/Matrix/MatrixHandler/MatrixMultiplication/: MatMulNaiveHandler.hpp  MatScalarMulNaiveHandler.hpp
include/Matrix/MatrixHandler/MatrixSin/: MatSinNaiveHandler.hpp
include/Matrix/MatrixHandler/MatrixSinHandler/: EyeMatSinHandler.hpp  ZeroMatSinHandler.hpp
include/Matrix/MatrixHandler/MatrixSubHandler/: EyeMatSubHandler.hpp  ZeroMatSubHandler.hpp
include/Matrix/MatrixHandler/MatrixSubtraction/: MatSubNaiveHandler.hpp
include/Matrix/MatrixHandler/MatrixTranspose/: MatDervTransposeNaiveHandler.hpp  MatTransposeNaiveHandler.hpp
include/Matrix/MatrixInterface/: MatrixAccessors.ipp  MatrixConstructors.ipp  MatrixUtils.ipp  MatrixVirtuals.ipp
include/Matrix/MatrixSplOps/: MatrixEyeOps.hpp  MatrixZeroOps.hpp
include/Matrix/UnaryOps/: GenericMatCos.hpp  GenericMatDet.hpp  GenericMatInv.hpp  GenericMatSigma.hpp  GenericMatSin.hpp  GenericMatTrace.hpp  GenericMatTranspose.hpp  GenericMatUnary.hpp  GenericMatVec.hpp
include/MemoryManager/: MemoryManager.hpp
include/MemoryManager/MemoryStrategy/: IMemoryStrategy.hpp
include/Scalar/: CommonFunctions.hpp  CommonHeader.hpp  Expression.hpp  IVariable.hpp  MetaVariable.hpp  Parameter.hpp  VarWrap.hpp  Variable.hpp
include/Scalar/BinaryOps/: GenericBinaryC0Function.hpp  GenericDiv.hpp  GenericPow.hpp  GenericProduct.hpp  GenericScalarBinary.hpp  GenericSub.hpp  GenericSum.hpp
include/Scalar/UnaryOps/: GenericACos.hpp  GenericACosh.hpp  GenericASin.hpp  GenericASinh.hpp  GenericATan.hpp  GenericATanh.hpp  GenericCos.hpp  GenericCosh.hpp  GenericExp.hpp  GenericLog.hpp  GenericNeg.hpp  GenericScalarUnary.hpp  GenericSin.hpp  GenericSinh.hpp  GenericSqrt.hpp  GenericTan.hpp  GenericTanh.hpp  GenericUnaryC0Function.hpp  GenericUnaryC1Function.hpp
include/UnaryOps/: GenericACos.hpp  GenericACosh.hpp  GenericASin.hpp  GenericASinh.hpp  GenericATan.hpp  GenericATanh.hpp  GenericCos.hpp  GenericCosh.hpp  GenericExp.hpp  GenericLog.hpp  GenericNeg.hpp  GenericSin.hpp  GenericSinh.hpp  GenericSqrt.hpp  GenericTan.hpp  GenericTanh.hpp
src/: CommonFunctions.cpp  CommonHeader.cpp  Expression.cpp  MemoryManager.cpp  MetaVariable.cpp  Parameter.cpp  VarWrap.cpp  Variable.cpp
src/Matrix/: CommonMatFunctions.cpp  GlobalParameters.cpp  MatOperators.cpp  Matrix.cpp  MatrixBasics.cpp  MatrixSplOps.cpp  MetaMatrix.cpp
src/Matrix/BinaryOps/: BinarySplOps.cpp
src/Matrix/MatrixHandler/: EyeMatAddHandler.cpp  EyeMatMulHandler.cpp  MatAddNaiveHandler.cpp  MatMulNaiveHandler.cpp  MatrixHandler.cpp  ZeroMatAddHandler.cpp  ZeroMatMulHandler.cpp
src/Matrix/MatrixSplOps/: MatrixEyeOps.cpp  MatrixZeroOps.cpp
src/MemoryManager/: MemoryManager.cpp
src/Scalar/: CommonFunctions.cpp  CommonHeader.cpp  Expression.cpp  MetaVariable.cpp  Parameter.cpp  VarWrap.cpp  Variable.cpp
test/: CMakeLists.txt  MatTest.cpp  OpsTest.cpp
(+171 files in other folders)
